# fintech-medallion-portfolio

./: .env.example  .gitignore  CLAUDE.md  README.md  fintech_pipeline_handoff.md  pyproject.toml
.github/workflows/: bi-refresh.yml  ci.yml  master-pipeline.yml  pages.yml  prod.yml
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-medallion-layer-ownership.md  0003-uv-for-python-dependency-management.md  0004-application-mode-not-package-mode.md  0005-learning-mode-no-claude-generated-code.md  0006-gitkeep-for-empty-data-lake-directories.md  0007-bronze-ingestion-durability-atomic-writes-jsonl-logs.md  0008-twelve-factor-secrets-via-dotenv.md  0009-alpha-vantage-downgrade-fmp-primary-prices.md  0010-tickers-swap-fmp-allowlist.md  0011-fmp-fundamentals-five-record-cap.md  0012-insider-trades-phase-3-sec-edgar.md  0013-gold-star-schema.md  0014-terraform-for-iac.md  0015-dbt-cloud-developer-api-usable.md  0016-free-edition-default-storage-workaround.md  0017-free-edition-account-admins-principal-unavailable.md  0018-bronze-pyspark-autoloader-supersedes-copy-into.md  0019-alpha-vantage-deferred-from-bronze.md  0020-silver-dq-observability-schema.md  0021-gold-implementation-refinements.md  0022-cicd-github-actions-dbt-cloud.md  (+4 more)
fintech_dbt/: README.md  dbt_project.yml  package-lock.yml  packages.yml
terraform/: .terraform.lock.hcl  backend.tf  bronze_jobs.tf  catalogs.tf  github.tf  grants.tf  pipelines.tf  providers.tf  schemas.tf  silver_pipelines.tf  sql_warehouse.tf  terraform.tfvars.example  variables.tf  versions.tf  volumes.tf
(+33 files in other folders)
