[project]
name = "fintech-medallion-portfolio"
version = "0.1.0"
description = "FinTech market data ingestion (Alpha Vantage + FMP) -> local Bronze lake"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.111.0",
    "databricks-sql-connector>=4.2.6",
    "gspread>=6.2.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
